fix: cors configuration